# YuRadio

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: README.md
.github/workflows/: android.yml  ci.yml  linux.yml  release.yml  windows.yml
android/: AndroidManifest.xml  build.gradle
android/res/drawable/: shortwave.xml  splashlogo.xml
android/res/values/: AppTheme.xml
android/src/org/yuradio/: AppActivity.java  MediaPlayerActivity.java  MediaPlayerService.java  NativeMediaController.java  NotificationClient.java  QtBootServiceBroadcastReceiver.java  RadioPlayer.java  StreamTitleBroadcastReceiver.java  VirtualKeyboardListener.java
cmake/: CPackCommon.cmake  CompilerWarnings.cmake  FindFFmpeg.cmake  OSConfig.cmake  VersionConfig.cmake
cmake/linux/: CPackConfig.cmake  DesktopConfig.cmake
cmake/macos/: DesktopConfig.cmake
cmake/windows/: CPackConfig.cmake  DesktopConfig.cmake
hotreloader/: CMakeLists.txt  hotreloader.h  hotreloaderclient.cpp  hotreloaderclient.h  hotreloaderserver.cpp  hotreloaderserver.h  hotreloaderurlinterceptor.cpp  hotreloaderurlinterceptor.h  server.cpp
resources/linux/: com.yuradioproject.desktop  com.yuradioproject.metainfo.xml.in
resources/windows/: installscript.qs  yuradio.rc.in
src/: App.qml  AppSettings.qml  CMakeLists.txt  ClickableLink.qml  ErrorPage.qml  IconButton.qml  Main.qml  PullToRefreshHandler.qml  PullToRefreshIndicator.qml  RadioBottomBar.qml  RadioBottomBarDrawer.qml  RadioStationDelegate.qml  RadioStationSearchFilterDialog.qml  RadioStationsView.qml  RadioStationsViewHeader.qml  Utils.qml  abstractrestmodel.cpp  abstractrestmodel.h  algorithm.cpp  algorithm.h  androidkeyboard.cpp  androidkeyboard.h  application.cpp  application.h  applicationconfig.h.in  audiostreamrecorder.cpp  audiostreamrecorder.h  basicradiocontroller.cpp  basicradiocontroller.h  circularbuffer.cpp  circularbuffer.h  downloadspeedmeasurer.cpp  downloadspeedmeasurer.h  ffmpegradiocontroller.cpp  ffmpegradiocontroller.h  globalkeylistener.cpp  globalkeylistener.h  icecastreader.cpp  icecastreader.h  icecastreaderproxyserver.cpp  (+59 more)
src/YuRadioContents/: AboutPage.qml  App.qml  AppColors.qml  AppConfig.qml  AppSettings.qml  AppStorage.qml  BookmarkPage.qml  CMakeLists.txt  ClickableLink.qml  CompletionComboBox.qml  DatePickerComboBox.qml  DirectoryPicker.qml  ElidedTextEdit.qml  FavoriteRadioStationsView.qml  FilledGridView.qml  HeaderComboBox.qml  HistoryListView.qml  HistoryListViewHeader.qml  HistoryPage.qml  HistorySearchFilterDialog.qml  HistoryTableView.qml  IconButton.qml  IntervalPickerPopup.qml  ItunesButton.qml  ListViewHighlightBar.qml  ListViewSortHeader.qml  MainRadioPlayer.qml  MarqueeText.qml  MomentumAnimation.qml  MoreOptionsMenu.qml  OutlinedButton.qml  PullToRefreshHandler.qml  PullToRefreshIndicator.qml  RadioBottomBar.qml  RadioBottomBarContents.qml  RadioBottomBarDrawer.qml  RadioDrawer.qml  RadioImage.qml  RadioStationDelegate.qml  RadioStationInfoPanel.qml  (+29 more)
src/YuRadioContents/android/: YuRadioWindow.qml
src/YuRadioContents/shaders/: RoundImage.frag
src/android/: CMakeLists.txt  androidkeyboard.cpp  androidkeyboard.h  androidmediaplayerservice.cpp  androidmediaplayerservice.h  androidmediasessionimageprovider.cpp  androidmediasessionimageprovider.h  androidradiocontroller.cpp  androidradiocontroller.h  androidstatusbar.cpp  androidstatusbar.h  nativemediacontroller.cpp  nativemediacontroller.h  notificationclient.cpp  notificationclient.h  statusbar.h  virtualkeyboardlistener.cpp  virtualkeyboardlistener.h
src/audio/: CMakeLists.txt  audio_device.cpp  audio_format.cpp  audio_output_device.cpp  audio_resampler.cpp  decoder.cpp  demuxer.cpp  error.cpp  frame.cpp  miniaudio_audio_output.cpp  muxer.cpp  packet.cpp  packet_queue.cpp  player.cpp  qt_audio_output.cpp  qt_audio_output_device.cpp  ring_buffer.cpp
src/audio/include/ffmpeg/: audio_device.h  audio_format.h  audio_format_p.h  audio_resampler.h  decoder.h  demuxer.h  error.h  frame.h  maybe.h  miniaudio_audio_output.h  muxer.h  packet.h  packet_queue.h  pimpl.h  player.h  qt_audio_output.h  qt_audio_output_device.h  ring_buffer.h  scope_guard.h  types.h  utils.h
src/linux/: CMakeLists.txt  linuxmediaplayerservice.cpp  linuxmediaplayerservice.h  linuxradiocontroller.cpp  linuxradiocontroller.h
src/network/: CMakeLists.txt  abstractrestmodel.cpp  abstractrestmodel.h  json.cpp  json.h  jsonrestlistmodel.cpp  jsonrestlistmodel.h  limitpagination.h  modelhelper.h  networkmanager.cpp  networkmanager.h  networkmanagerfactory.cpp  networkmanagerfactory.h  pagepagination.cpp  pagepagination.h  restpagination.h
src/qml/: App.qml  CMakeLists.txt  FakeFlickable.qml  OutlinedButton.qml  PullToRefreshHandler.qml  PullToRefreshIndicator.qml  RadioBottomBar.qml  RadioBottomBarDrawer.qml  RadioDrawer.qml  RadioStationDelegate.qml  RadioStationSearchFilterDialog.qml  RadioStationsView.qml  SearchBar.qml
src/qml/shaders/: Blur.frag
translations/: YuRadio_de.ts  YuRadio_en.ts  YuRadio_fr.ts  YuRadio_ja.ts  YuRadio_ru.ts
